<resources>
    <string name="app_name">Talbrum HRMS</string>
    <string name="loren_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit...... See More</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="settings">Settings</string>
    <string name="action_alert">Alerts</string>
    <string name="rupee">\u20B9</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="leave_balance">LEAVE BALANCE</string>
    <string name="List_of_holidays">LIST OF HOLIDAYS</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabactivity">tabactivity</string>
    <string name="attendance">Timesheet</string>
    <string name="leaves">Leaves</string>
    <string name="reimbursements">Reimbursements</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="total">TOTAL</string>
    <string name="earned_leaves">EARNED LEAVES</string>
    <string name="currently_available">Currently Available</string>
    <string name="leaves_accured">Used this year so far</string>
    <string name="leaves_available">Total Available</string>
    <string name="try_again">Try Again</string>
    <string name="no_reimbursements">No Reimbursements Found</string>
    <string name="dummy_day">Dummay Day</string>
    <string name="holiday_name">Holiday Name</string>
    <string name="dummy_date">Dummy Date</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading…</string>
    <string name="dash">\  -  \  </string>
    <string name="check_internet">Check Your Internet Connection</string>
    <string name="noconnection">Internet Connection not found.</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="approve_leaves">Approve Leaves</string>
    <string name="apply">Apply</string>
    <string name="no_working_days">Number of Working Days</string>
    <string name="select_reason">Select Reason</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="enter_date">Enter Date</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="dummy_working_days">Choose leave Dates</string>
    <string name="leave_days">Leave Days</string>
    <string name="absent_days">Absent Days</string>
    <string name="outdoor_days">Outdoor Days</string>
    <string name="in_time">In Time</string>
    <string name="in_time_text">As marked by the software/ biometric device. For any issues Contact HR Manager.</string>
    <string name="policy">Policy</string>
    <string name="alerts">Alerts</string>
    <string name="attendance_marked">Attendance Marked Successfully</string>
    <string name="from_date">Enter From Date</string>
    <string name="to_date">Enter To Date</string>
    <string name="applied_succesfully">Leave Applied Successfully</string>
    <string name="no_leaves_to_approve">No Leaves to Approve</string>
    <string name="no_holidays">No Holidays Found</string>
    <string name="no_leaves">No Leaves Available</string>
    <string name="no_alerts">No Unread Alerts Available</string>
    <string name="alert_read">Marked Read</string>
    <string name="allworkingdays">Working Days in Year</string>
    <string name="logging_in">Logging in…</string>
    <string name="salary_slip">Salary Slip</string>
    <string name="income_tax">Income Tax :\ </string>
    <string name="professional_tax">Professional Tax :\ </string>
    <string name="total_deduction">Total Deductions :\ </string>
    <string name="net_credit">Net Credit :\ </string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="present">PRESENT</string>
    <string name="absent">ABSENT</string>
    <string name="update_application">Update Your Application</string>
    <string name="no_leaves_applied">No leaves Found</string>
    <string name="rejected">Rejected</string>
    <string name="approved_by">Approved By : \ </string>
    <string name="search">Search</string>
    <string name="people">People</string>
    <string name="menu_tem_logout">Logout</string>
    <string name="email">Email</string>
    <string name="tc"><u>Terms &amp; Conditions</u>.</string>
    <string name="tc_head">By clicking on login, you agree to our</string>
    <string name="overview">Overview</string>
    <string name="pipe">\  | \ </string>
    <string name="message">message</string>
    <string name="mail">mail</string>
    <string name="call">call</string>
    <string name="chat">Assistant</string>
    <string name="chat_default">Hi,\nLet me know if u need any help anytime.\nFor ideas on what i do, type: give me a hint.</string>
    <string name="NetworkError">Cannot connect to Internet…Please check your connection!</string>
    <string name="ServerError">The server could not be found. Please try again after some time!!</string>
    <string name="AuthFailureError">Cannot connect to Internet…Please check your connection!</string>
    <string name="ParseError">Parsing error! Please try again after some time!!</string>
    <string name="NoConnectionError">Cannot connect to Internet…Please check your connection!</string>
    <string name="TimeoutError">Connection TimeOut! Please check your internet connection.</string>
    <string name="Timeout">Out Time</string>
    <string name="DistanceError">You are within a distance of 150 m from Office</string>
    <string name="notifications">Holiday Notifications</string>
    <string name="notification_title">Display message notifications in status bar</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="days_notification">Days before getting notified</string>
    <string name="talbrum_url">Talbrum URL</string>
    <string name="enter_company_domain">Enter Company Domain</string>
    <string name="proceeding">Proceeding...</string>
    <string name="company_domain_example">Ex: [company_domain].talbrum.com</string>
    <string name="check_internet_and_server">Check your Internet Connection or the entered URL</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="web_error">No Application installed to open it !!</string>
    <string name="upload_timesheet">Upload Timesheet</string>
    <string name="approve_timesheet">Approved Timesheet</string>
    <string name="rejected_timesheet">Rejected Timesheet</string>
    <string name="create">Create</string>
    <string name="in_hours">In Hours (Optional)</string>
    <string name="default_time">Default Time</string>
    <string name="timesheet">Timesheet</string>
    <string name="no_approved_timesheet">No Approved Timesheet</string>
    <string name="no_rejected_timesheet">No Rejected Timesheet</string>
    <string name="date">Date</string>
    <string name="working_status">Working Status</string>
    <string name="remark">Remark</string>
    <string name="submit">Submit</string>
    <string name="add_timesheet_row">Add Row</string>
    <string name="upload_file">Upload File</string>
    <string name="company_domain">Company Domain</string>
    <string name="hours">Hours</string>
    <string name="type">Type</string>
    <string name="rejected_by">Rejected By :</string>
    <string name="rejected_on">Rejected On :</string>
    <string name="file_name">File :</string>
    <string name="edit_and_resend"><![CDATA[Edit & Resend]]></string>
    <string name="status">Status</string>
    <string name="recruitment">Recruitment</string>
    <string name="new_vacancies">New Vacancies</string>
    <string name="hiring_status">Hiring Status</string>
    <string name="schedule">Schedule/Reschedule</string>
    <string name="assessment">Assessment</string>
    <string name="no_vacancy_found">No Vacancy Found</string>
    <string name="no_on_going_interview">No Ongoing Interview</string>
    <string name="candidates">Candidates</string>
    <string name="no_candidate_found">No Candidate Found</string>
    <string name="ask_for_feedback">Do You want to give feedback ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="feedback">FEEDBACK</string>
    <string name="excellent">Excellent</string>
    <string name="horrible">Horrible</string>
    <string name="poor">Poor</string>
    <string name="good">Good</string>
    <string name="attendance_mark_error">Error while marking Attendance</string>
    <string name="getting_location">Getting Location</string>
    <string name="mark_outtime">Are you sure want to mark Out Time?</string>
    <string name="tracking">Tracking Map</string>
    <string name="track_me">Track Me</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="gps_not_enabled">GPS is not enabled. Do you want to go to Settings menu ?</string>
    <string name="cancel">Cancel</string>
    <string name="camera_access">Give CAMERA ACCESS Permission to capture selfie !!</string>
    <string name="something_went_wrong">OOPS, Something went Wrong.</string>
    <string name="track_me_message">Are you sure want to Mark your Location ?</string>
    <string name="location_marked">Location Marked</string>
    <string name="done">Done</string>
    <string name="mark_read">Mark Read</string>
    <string name="upcoming_holiday">You have an upcoming holiday on </string>
    <string name="address_not_found">Address not Found</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="talent_cerebrum">Talent Cerebrum</string>
    <string name="next">NEXT</string>
    <string name="notification_channel">Holiday notification</string>
    <string name="employee_code">Employee Code</string>
    <string name="missing_fields">Missing Fields</string>
    <string name="date_range">Date Range : </string>
    <string name="location_list">Locations</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="setting_enabled" translatable="false">EnabledSetting</string>
    <string name="settings_label">Settings</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="privacy">http://www.google.com/policies/privacy</string>
    <string name="ringer_permissions">Ringer Permissions</string>
    <string name="silent_mode_activated">Silent mode activated</string>
    <string name="touch_to_relaunch">Touch to launch the app.</string>
    <string name="back_to_normal">Back to normal</string>
    <string name="geofence_transition_notification_text">Click to return to app</string>
    <string name="instruction_where_description">Where do you want to be reminded?</string>
    <string name="instruction_where_subtitle_description">Drag the map to set the location</string>
    <string name="instruction_radius_description">Choose the radius and enter message</string>
    <string name="continue_description">Continue</string>
    <string name="error_required">Required</string>
    <string name="message_hint">Message to notify</string>
    <string name="radius_description">%1$s meters</string>
    <string name="marker_content_description">Marker</string>
    <string name="reminder_added_success">Reminder added!</string>
    <string name="reminder_removed_success">Reminder removed!</string>
    <string name="geofence_transition_entered">You are Entered In Location</string>
</resources>