<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/leave_approve_toolbar_button"
        android:orderInCategory="1"
        android:title="@string/approve_leaves"
        app:showAsAction="always" />
    <item
        android:id="@+id/alert"
        android:orderInCategory="2"
        android:title="@string/action_alert"
        app:showAsAction="always" />
    <item
        android:id="@+id/track_me"
        android:orderInCategory="100"
        android:title="@string/track_me"
        app:showAsAction="never" />
    <item
        android:id="@+id/tracking_map"
        android:orderInCategory="100"
        android:title="@string/tracking"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/timeout"
        android:orderInCategory="100"
        android:title="@string/Timeout"
        app:showAsAction="never" />
    <item
        android:id="@+id/chatbot"
        android:orderInCategory="100"
        android:title="Chatbot"
        app:showAsAction="never" />

</menu>
