<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/from" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/date_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:enabled="true"
                    android:focusable="false"
                    android:hint="@string/enter_date"
                    android:inputType="none"
                    android:paddingBottom="15dp"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/calendar1"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/calendar" />
            </FrameLayout>

            <Spinner
                android:id="@+id/spinner_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/day_array"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/to" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/date_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:enabled="true"

                    android:focusable="false"
                    android:hint="@string/enter_date"
                    android:inputType="none"
                    android:paddingBottom="15dp"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/calendar2"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/calendar" />
            </FrameLayout>

            <Spinner
                android:id="@+id/spinner_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/day_array"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/reason_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_reason"
        android:inputType="none"
        android:paddingBottom="15dp"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:text="@string/select_reason" />

    <Spinner
        android:id="@+id/spinner_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:text="@string/no_working_days" />

    <TextView
        android:id="@+id/working_days_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:text="@string/dummy_working_days"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/apply"
        android:textColor="@color/white" />
</LinearLayout>